--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @use './reset';
-@use './_variables' as var;
+@use './variables' as var;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -17,8 +17,6 @@ html,body{
   }
 }
 
-.title{
-  font-size: 1.5rem;
-  color: #fff;  
-  margin-bottom: 1.375rem;
-}
+
+
+
