subindo dados de api mock

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,9 +11,9 @@ html,body{
   font-size: 16px;
 
   #app{
-    display: grid;
-    min-height: 100vh;
-    grid-template-rows: auto 1fr auto;
+    // display: grid;
+    // min-height: 100vh;
+    // grid-template-rows: auto 1fr auto;
   }
 }
 
