--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,11 +11,24 @@ html,body{
   font-size: 16px;
 
   #app{
-    // display: grid;
-    // min-height: 100vh;
-    // grid-template-rows: auto 1fr auto;
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
+    overflow: hidden;
+  }
+
+  main{
+    max-width: 100vw;
   }
 }
+
+.container{
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 14px;
+}
+
 
 
 
